# sankat-mochan

./: .gitattributes  .gitignore  AGENTS.md  CHECKLIST.html  LICENSE  PLAN.md  README.md  dev.ps1  implementation_plan.md  run.md  server.sh
app-simulator/: .gitignore  README.md  index.html  package-lock.json  package.json
app-simulator/scripts/: copy-assets.mjs
app-simulator/src/: App.jsx
app-simulator/tests/: envelope.test.js  lora.test.js
arduino-uno-q/: .gitignore  README.md  sync-from-raspberrypi.sh
arduino-uno-q/field-node/: FIELD-NODE.md  bridge_radio.py  config.example.json  config.json  envelope.py  field-node.service  gateway.py  install-service.sh  node.py  preflight.py  run.sh  stop.sh  uplink.py
arduino-uno-q/field_beacon/: field_beacon.ino
arduino-uno-q/lora_modem/: lora_modem.ino
arduino-uno-q/python/: main.py
arduino-uno-q/sketch/: sketch.ino
arduino-unoq/: README.md  app.yaml  sync-from-pi-code.sh
arduino-unoq/field-node/: FIELD-NODE.md  ble_link.py  bridge_radio.py  chainlog.py  config.example.json  config.json  (+11 more)
audio/: WhatsApp Audio 2026-07-10 at 03.51.49.opus
backend/: .gitignore  LID-BENCHMARK.md  README.md  aihub_poll_profile.py  aihub_precompiled_stt.py  aihub_resubmit_stt.py  app.py  backends.example.json  compose.yaml  dev.ps1  dev.sh  dump_mel_golden.py  extract_bangalore_basemap.py  extract_wayanad_basemap.py  indic_stt.py  models.py  pyproject.toml  setup-geniex.ps1  setup-postgres.sh  stt.py  stt_bench.py  triage.py
backend/benchmarks/: autodetect_bench.py  bench.py  bench_extraction.py  lid_bench.py  lid_test.py  rank_models.py  stt_bench.py
backend/deploy/npu/: README.md  build_gemma_gguf.py  eval_gguf.py  run_gemma_npu.sh
backend/deploy/npu/alt-aihub-qwen/: build_mobile_npu.py  run_on_device.sh
backend/finetune/: README.md  colab_gemma4_finetune.ipynb  eval_results.csv  gemma4_finetuned.ipynb  kaggle_gemma4_e2b_finetune.ipynb  pyproject.toml  sahayak_finetune.py  t4_load_test.py
backend/finetune/data/: sample.jsonl  train.jsonl
backend/finetune/tests/: test_validate_dataset.py
backend/scripts/: aihub_compile_stt.py  aihub_poll_profile.py  aihub_precompiled_stt.py  aihub_resubmit_stt.py  dump_mel_golden.py
backend/tests/: conftest.py  test_tags.py
backend/tests/integration/: test_api.py  test_tags_pipeline.py
backend/tests/unit/: test_intelligence_tags.py  test_models.py  test_triage.py
backend/web/: index.html  package-lock.json  package.json
backend/web/src/: App.jsx  index.css
backend/web/src/components/: ActivityDrawer.jsx  BenchmarkDropdown.jsx  CapacityStrip.jsx  IncidentQueue.jsx  RespondersPanel.jsx  VoiceRecorder.jsx
backend/web/src/components/ui/: badge.jsx  card.jsx  scroll-area.jsx  separator.jsx
backend/web/src/lib/: mapConfig.js  utils.js
command-post/: .env.example  .gitignore  LID-BENCHMARK.md  README.md  aihub_compile_stt.py  aihub_precompiled_stt.py  app.py  autodetect_bench.py  bench.py  database.py  dev.sh  download_fleurs.py  dump_mel_golden.py  extract_bangalore_basemap.py  extract_wayanad_basemap.py  indic_stt.py  intelligence.py  lid_bench.py  lid_test.py  models.py  npu_server.py  rank_models.py  requirements.txt  setup-geniex.ps1  setup-postgres.sh  stt.py  stt_bench.py  test_tags.py  triage.py
docs/: AI-Hub-Compile-Guide.md  ARCHITECTURE-DIAGRAM.md  BENCHMARK-NPU-MODELS.md  CHECKLIST.html  EDGE-LINK.md  HANDOFF-AIPC.md  INTELLIGENCE-DESIGN.md  KAGGLE_FINETUNE_GUIDE.md  OPS-COPILOT-PLAN.md  PLAN.md  Project One-Page Sample.html  SIMULATION-DEMO.md  STACK-INVENTORY.md  Sankat-Mochan-Technology-Stack-Document.docx  TESTING.md  benchmark-ledger.html  one-pager.html  run.md  training plan.md
finetune/: README.md  colab_gemma4_finetune.ipynb  eval_comparison.md  eval_questions.csv  eval_results_base.csv  gemma4_finetuned.ipynb  kaggle_gemma4_e2b_finetune.ipynb  kaggle_gemma4_e4b_finetune.ipynb  requirements.txt  sahayak_finetune.py  t4_probe.py  validate_dataset.py
mesh-app/: .gitignore  BUILD-APK.md  README.md  build-apk.ps1  build-apk.sh  build.gradle.kts  settings.gradle.kts
mobile-application/: BUILD-APK.md  README.md  build-apk.ps1  build-apk.sh  build.gradle.kts
pi-code/: .gitignore  README.md  ble_link.py  bridge_client.py  bridge_radio.py  config.example.json  config.field.example.json  config.gateway.example.json  config.py  envelope.py  gateway.py  node.py  preflight.py  run.sh  sx127x.py  test_intake_lanes.py  uplink.py
raspberrypi/: README.md  ble_link.py  config.field.example.json  config.py  envelope.py  gateway.py  gpio_compat.py  node.py  pyproject.toml  run.sh  selftest_lora.py  serial_radio.py  server.sh  test_voice_assembler.py
raspberrypi/tests/: conftest.py  test_chainlog.py  test_envelope.py  test_intake_lanes.py  test_voice_assembler.py
sim/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
(+212 files in other folders)
